--- a/style.css
+++ b/style.css
@@ -11,175 +11,133 @@ body{
   color: white;
 }
 
-.header{
-  height: 5em;
-  width: 100%;
-  background: rgba(255,255,255,0.06);
-/* border-radius: 16px; */
-box-shadow: 0 4px 30px rgba(0,0,0,0.1);
-display: flex;
-position: fixed;
-color: white;
- z-index: 999;
- background: transparent;
+@media (min-width: 320px) and (max-width: 768px) {
+
+  body{
+    background-color: #393E46;
+  }
+
+  .header{
+    background-color: rgba(34, 40, 49, 0.8);
+    width: 100vw;
+    height: 7vh;
+    position: fixed;
+    z-index: 999999;
+    box-shadow: 0 4px 30px rgba(0,0,0,0.1);
+    background: transparent;
  backdrop-filter: blur(9.1px);
  -webkit-backdrop-filter: blur(9.1px);
  border: 1px solid rgba(255,255,255, 0.08);
-}
+  }
 
+  nav{
+    display: flex;
+    justify-content: center;
+    display: flexbox;
+    gap: 2px;
+  }
 
-
-#logo img{
-  width: 3.5em;
-  height: 3.5em;
+  nav a{
+  top: 0.5em;
   position: relative;
-  justify-content: flex-start;
-  border-radius: 100%;
-  top: 0.6em;
-  left: 1.2em;
-}
-
-.navbar {
-  display: flex;
-  position: relative;
-  height: 2em;
-  width: 50%;
-  justify-content: space-between;
-  right:0;
-  left: 20em;
-  top: 1.6em;
-  padding: 2px 5px ;
-  text-decoration: none;
-}
-
-.navbar a{
-  text-decoration: none;
-  color: #ffffff;
-  font-weight: bold;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 1em;
-  padding: 10px 18px;
-  overflow: hidden;
-  position: relative;
-  transition: 0.4s;
-  position: relative;
-}
+  color: #DFD0B8;
+  text-decoration: none;
+  font-weight: bold;
+  padding: 8px 15px;
+  transition: background 0.3s ease;
+  }
 
-
-.navbar a::before{
-  content:"";
-  position: absolute;
-  width: 0;
-  height: 4px;
-  background-color: orange;
-  bottom: 0;
-  left: 0;
-  transition: width 0.4s;
-}
-
-.navbar a:hover::before{
-  width: 100%;
-
-}
-
-.Hero {
+  nav a:hover {
   color: white;
+  background: #ffa617;
+  border-radius: 6px;
+}
+
+nav a::after {
+  content: '';
+  position: absolute;
+  left: 100%;
+  bottom: -8px;
+  width: 0;
+  height: 3px;
+  background: #fca311;
+  transition: all 0.3s ease;
+}
+
+nav a:hover::after {
+  left: 0;
+  width: 100%;
+}
+
+  .logo{
+    display: none;
+  }
+
+  .hero{
+  color: #DFD0B8;
   position: relative;
   justify-self: center;
-  top: 18em;
+  top: 15em;
   height: 5em;
-  /* width: 50em; */
+  font-size: 1em;
   text-align: center;
   padding: 5px 2.5px;
   font-family: 'Spectral','Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+
+  /* .hero {
+  position: relative;
+  top: 20em;
+  align-items: center;
+  text-align: center;
+  justify-self: center;
+} */
+
+.hero h1{
+  color: #DFD0B8;
+  font-size: 60px;
 }
 
-.Hero span{
-  color: orange;
+.hero span {
+  font-size: 60px;
+  font-family: 'Spectral', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #90eaba;  
 }
 
 
-
-#hero-heading{
-   font-size: 3.5em;
-   font-weight: bold;
+.hero h3 {
+  color: #D4C5B9;
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-top: 13px;
 }
 
-#hero-subheading{
-  margin-top: 30px;
-  font-size: 1.5em;
-}
-
-.social-mediaa{
+  .social-media{
   display: flex;
   gap: 25px;
   position: relative;
   justify-content: center;
-  top: 27em;
+  top: 32em;
   left: 0;
 }
 
-.social-mediaa img
+.social-media img
 {
   height: 2.2em;
   width: 2.2em;
   border-radius: 50%;
+  box-shadow: 0 0 10px#0f0f1e;
 }
 
-#gmaill img:hover,
-#instaa img:hover,
-#Gitt img:hover,
-#twitterr img:hover,
-#linkedinn img:hover {
+#gmail img:hover,
+#insta img:hover,
+#Git img:hover,
+#twitter img:hover,
+#linkedin img:hover {
   transform: translateY(-6px);
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.7),
     0 0 15px rgba(0, 168, 232, 0.3);
   color: #00A8E8;
   transition: 0.15s;
-}
-
-@media screen and (max-width: 600px) {
-
-  body{
-    background-color: white;
-  }
-
-  .Hero{
-       color:#48489a;
-  }
-
-  .Hero span{
-    color: rgb(175, 60, 175);
-  }
-
-  .social-mediaa{
-    position: relative;
-    display: flex;
-    justify-self:center;
-    /* background-color: #00A8E8; */
-    flex-direction: row;
-    top: 35em;
-  }
-
-  .header{
-    height: 10vh;
-    max-width: 100vh;
-    justify-content: left;
-    display: fixed;
-  }
-
-  .navbar{
-    display: flex;
-    flex-direction: row;
-    position: relative;
-    align-items: center;
-  }
-
-  .navbar a{
-    color: black;
-    left: -19em;
-    gap: 5px;
-  }
-
-  
 }
